# ecosystem

./: .env.example  .gitignore  .mergify.yml  .sops.yaml  .trivy.yaml  ACTIONS_SHA.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_ADR.md  CHANGELOG.md  CI_CD_FIX_SUMMARY.md  CLOUDFLARE_INTEGRATION_PLAN.md  CNAME  CODEOWNERS  CODE_REVIEW_FIXES_SUMMARY.md  COMPLETE_FIX.md  CONFIGURATION_COMPLETE.md  CONTRIBUTING.md  CRITICAL_ISSUES_RESOLUTION_REPORT.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DISABLE_KUBERNETES_MULTIDOC.md  Dockerfile  Dockerfile.client  Dockerfile.server  ENVIRONMENT_VARIABLES_BEST_PRACTICES.md  ERROR_LOG.md  FAILURE_ANALYSIS.md  FINAL_COMPLETION_REPORT.md  FORMAT_VALIDATION_SUMMARY.md  GITHUB_SECRETS_CONFIG.md  LICENSE  METADATA.yaml  Makefile  OPERATIONS.md  PHASE2_BEST_PRACTICES_VALIDATION.md  PHASE_A_B_COMPLETION_SUMMARY.md  PHASE_C_DOCKER_BUILD_WORKFLOW.md  PHASE_C_GKE_STATUS.md  PHASE_C_STATUS_REPORT.md  (+39 more)
.agent_hooks/: on-alert.yaml  post-deploy.yaml  pre-commit.yaml
.circleci/: config.yml
.claude/hooks/: session-start.sh
.github/: ACTIONS_POLICY.md  CODEOWNERS  allowed-actions.yaml  dependabot.yml
.github/workflows/: argocd-diff-gate.yml  auto-assign.yml  auto-fix-ci.yaml  auto-repair.yaml  auto-sync-deploy.yaml  autonomous-bot.yaml  autoops.yml  build-and-deploy.yml  build-images.yaml  canary-deploy.yaml  cd.yml  ci-basic.yml  ci-failure-to-issue.yaml  ci-nopnpm.yml  ci.yaml  ci.yml  cloudflare-deploy.yml  codacy-review.yaml  codacy.yml  codeql.yml  compliance-report.yaml  debug-pods.yaml  dependabot-auto-merge.yaml  deploy-backend.yml  deploy-desktop.yml  deploy-gke-production.yaml  deploy-gke.yaml  deploy-im-integration.yml  deploy-monitoring.yaml  deploy-pages.yaml  deploy-supabase.yaml  deploy-web.yml  deploy.yml  dora-metrics.yaml  drift-detection.yaml  eco-deploy.yml  eco-supplychain-attest.yml  eco-supplychain-hashlock.yml  framework-self-maintenance.yaml  gke-deploy.yml  (+37 more)
.governance/: audit-log.yaml  compliance.yaml  ownership.yaml  policy.yaml
.tmp/refactor-retrieval/: action-plan.md  assumptions.raw.txt  clarify.targets.txt  decision-1.txt  decision-2.txt  dependency-mapping.md  emit-actions.md  external.open.snapshot.csv  external.open.sources.txt  external.professional.snapshot.csv  external.professional.sources.txt  facts.files.txt  focused-q1-legacy-refs.txt  focused-q2-supply-chain-coverage.csv  focused-q3-mapping-delta.md  gaps.raw.txt  p0.execution.md  p0.launch.yaml  p1.execution.md  p2.execution.md  phase.execution.trace.md  security-redline.raw.txt  summary.counts.txt  verification-matrix.csv
_merged/codevantaos-adk/: METADATA.yaml  README.md  ROLE_CATALOG.md  URN
_merged/codevantaos-api/: README.md
_merged/codevantaos-application-packaging/: METADATA.yaml  README.md  URN
_merged/codevantaos-architecture-plan/: README.md  (+2 more)
artifacts/: NEED_INPUT.md
backend/ai/: Dockerfile  README.md  pyproject.toml
backend/ai/engines/: __init__.py
backend/ai/engines/folding/: realtime_index.py  vector_folding.py
backend/ai/engines/inference/: resilience.py
backend/ai/src/: __init__.py  app.py  config.py  governance.py  routes.py
backend/ai/src/services/: __init__.py  circuit_breaker.py  connection_pool.py  embedding.py  engine_manager.py  grpc_server.py  health_monitor.py  worker.py
cloudflare/: ARCHITECTURE.md  README.md
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml  prometheus.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  ENV_REFERENCE.md  QYAML_GOVERNANCE.md  argocd-gitops-guide.md  auto-repair-architecture.md  circleci-runner-setup.md  complete-setup-guide.md  gcp-quota-guide.md  gke-operations.md  gke-security-hardening.md  oauth-setup-guide.md  pat-audit-report.md  pat-security-guide.md  phase0-p0-closure.md  phase2-deployment.md  phase3-deployment.md  prompt-workflow.enforced.md  supabase-monitoring-guide.md  supabase-operations.md
ecosystem/: docker-compose.ecosystem.yml
gitops/: applicationset-eco-platforms.yaml
helm/: Chart.yaml  values-staging.yaml  values.yaml
inputs/: run.yaml
k8s/: k8s-manifests.yaml
mobile/: package.json  pnpm-lock.yaml
policy/: ai_bot_review.rego  autoecops_governance.rego  dockerfile.rego  issues-governance.rego  qyaml_governance.rego  skipped_check_response.rego
scripts/: argocd-install.sh  argocd-setup-webhook.sh  build.sh  capabilities.py  configure-oauth-consent.sh  configure_all_secrets.sh  deploy-circleci-runner.sh  deploy-supabase-function.sh  deploy.sh  deploy_complete_infrastructure.sh  fix_configmaps.py  harden-gke-security.sh  import_guard.sh  increase_ssd_quota.py  platforms_refactor_retrieval.sh  preflight_secrets.sh  root_guard.sh  setup-gcp-quota.sh  setup_cloudflare_certs.sh  setup_gcp_oauth.py  setup_supabase_monitoring.sh  sync_configmaps.py
src/: __init__.py  app.py
supabase/: .gitignore  README.md  config.toml  rls-policies.sql  seed.sql
supplychain/: hashlock.attestation.intoto.json  hashlock.json
tests/: __init__.py  gate1-eventbus-fault-injection.sh  gate3-loki-load-test.py  generate-immutable-rules-report.py
(+676 files in other folders)
