[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eco-base"
version = "1.0.0"
description = "eco-base v1.0 — Enterprise Cloud-Native AI Platform with Multi-Engine Inference Routing"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "eco-base Platform Team", email = "platform-team@autoecoops.io" },
]
keywords = ["ai", "inference", "llm", "vllm", "sglang", "tgi", "ollama", "kubernetes", "governance", "qyaml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.21.0",
    "PyJWT>=2.9.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
]
db = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13",
]
ml = [
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "sentence-transformers>=3.0",
]

[project.scripts]
eco-base = "src.app:app"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true