[tool.poetry]
name = "eco-base-ai"
version = "1.0.0"
description = "AI generation + YAML governance service for eco-base platform"
authors = ["eco-base Platform Team <platform-team@autoecoops.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/indestructibleorg/eco-base"
repository = "https://github.com/indestructibleorg/eco-base"
keywords = ["ai", "inference", "llm", "vllm", "governance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "~0.111.0"
uvicorn = { extras = ["standard"], version = "~0.30.1" }
pydantic = "~2.7.4"
prometheus-client = "~0.20.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
